# aihack_2018

./: load_values  load_values.c  test_load.py
dat/: CMakeCache.txt  CMakeLists.txt  Jamroot  Makefile  cmake_install.cmake  main  main.cpp  setup.py  test
dat/rs/: c1-0-rs10458597.csv
